--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 PORT=8080
+
+
+USER=jhon_rivera
+PASS= Jhonda02*
+
+MONGODB_CNN = mongodb+srv://jhon_rivera:Jhonda02*@miclustercafe.p2uiwjg.mongodb.net/cafeDB
+SECRETORPRIVATEKEY = E5t035my$3c%3tW38T0k3n0687387@kykload
